--- a/app/src/main/res/layout/activity_daily.xml
+++ b/app/src/main/res/layout/activity_daily.xml
@@ -44,7 +44,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/dailyAdView">
+        app:layout_constraintBottom_toTopOf="@+id/dailyAdView"
+        app:menu="@menu/bottom_nav_menu">
 
     </android.support.design.widget.BottomNavigationView>
 
