--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.macromanager.macromanagerandroid.SettingsActivity">
+    tools:context="com.macromanager.macromanagerandroid.SettingsActivity"
+    android:id="@+id/settingsConstraintLayout">
 
     <RadioGroup
         android:id="@+id/genderRadioGroup"
@@ -38,7 +39,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/NotoSansUI-Regular"
         android:text="Gender"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,36 +50,36 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/NotoSansUI-Regular"
         android:text="Height Measurment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/weightMeasurmentRadioGroup"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/weightMeasurmentTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Weight Measurment"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/heightMeasurmentRadioGroup"
+        android:text="Weight Measurment"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />
 
     <RadioGroup
         android:id="@+id/heightMeasurmentRadioGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/heightMeasurmentTextView"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp">
+        android:layout_marginEnd="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/heightMeasurmentTextView"
+        android:layout_marginTop="16dp">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -130,11 +130,12 @@
         android:id="@+id/heightTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:text="Height"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weightMeasurmentRadioGroup"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/heightMeasurmentRadioGroup"
         android:layout_marginTop="16dp" />
 </android.support.constraint.ConstraintLayout>
