Changed radio groups to horizontal and added in a scrollview.

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.macromanager.macromanagerandroid.CalculatorActivity">
 
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/calculatorBottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
 </android.support.constraint.ConstraintLayout>
