--- a/app/src/main/res/layout/activity_daily.xml
+++ b/app/src/main/res/layout/activity_daily.xml
@@ -11,19 +11,21 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:numColumns="3"
+        app:layout_constraintBottom_toTopOf="@+id/userFoodRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/dailyAdView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dailyBottomNavtigation" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/userFoodRecyclerView"
@@ -41,11 +43,12 @@
         android:id="@+id/dailyBottomNavtigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toTopOf="@+id/dailyAdView"
-        app:menu="@menu/bottom_nav_menu">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        app:layout_constraintTop_toBottomOf="@+id/userFoodRecyclerView">
 
     </android.support.design.widget.BottomNavigationView>
 
