--- a/app/src/main/res/layout/activity_daily.xml
+++ b/app/src/main/res/layout/activity_daily.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.macromanager.macromanagerandroid.DailyActivity">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addMealFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_add"
+        app:layout_constraintBottom_toTopOf="@id/dailyBottomNavtigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="0dp" />
+
     <GridView
         android:id="@+id/macrosGridView"
         android:layout_width="0dp"
