--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="height_text_margin">16dp</dimen>
+    <dimen name="macro_title">20sp</dimen>
+    <dimen name="numbers">16sp</dimen>
+    <dimen name="meal_title">20sp</dimen>
+    <dimen name="add_meal_title">20sp</dimen>
 </resources>
