Beta version 1.0 apk release.

--- a/app/src/main/res/layout/activity_daily.xml
+++ b/app/src/main/res/layout/activity_daily.xml
@@ -30,6 +30,7 @@
         android:background="@color/colorPrimaryDark"/>
 
     <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/dailyAdView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,7 +38,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dailyBottomNavtigation" />
+        app:layout_constraintTop_toBottomOf="@+id/dailyBottomNavtigation"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/userFoodRecyclerView"
