--- a/app/src/main/res/layout/meal_recycler_cell.xml
+++ b/app/src/main/res/layout/meal_recycler_cell.xml
@@ -17,7 +17,8 @@
         android:textSize="@dimen/meal_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Title" />
+        tools:text="Title"
+        android:textColor="#FFFFFF"/>
 
     <TextView
         android:id="@+id/mealServingTextView"
@@ -29,7 +30,8 @@
         android:textSize="@dimen/numbers"
         app:layout_constraintStart_toEndOf="@+id/mealTitleTextView"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Serving" />
+        tools:text="Serving"
+        android:textColor="#FFFFFF"/>
 
     <TextView
         android:id="@+id/mealCaloriesTextView"
@@ -41,7 +43,8 @@
         android:textSize="@dimen/numbers"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mealTitleTextView"
-        tools:text="100" />
+        tools:text="100"
+        android:textColor="#FFFFFF"/>
 
     <Button
         android:id="@+id/mealButton"
