--- a/MacrosManager/app/src/main/res/layout/activity_daily.xml
+++ b/MacrosManager/app/src/main/res/layout/activity_daily.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cuinsolutions.macrosmanager.DailyActivity">
+    tools:context="com.cuinsolutions.macrosmanager.DailyActivity"
+    android:id="@+id/dailyConstraintLayout">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addMealFloatingActionButton"
