--- a/MacrosManager/app/src/main/res/layout/activity_settings.xml
+++ b/MacrosManager/app/src/main/res/layout/activity_settings.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cuinsolutions.macrosmanager.SettingsActivity"
-    android:id="@+id/settingsTopConstraintLayout">
+    tools:context="com.cuinsolutions.macrosmanager.SettingsActivity">
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
@@ -28,7 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/settingsConstraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -122,6 +121,16 @@
 
             </RadioGroup>
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/saveSettingsButton"
+                app:layout_constraintTop_toBottomOf="@+id/heightMeasurementRadioGroup"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"/>
+
             <RadioGroup
                 android:id="@+id/weightMeasurementRadioGroup"
                 android:layout_width="0dp"
@@ -154,19 +163,6 @@
             </RadioGroup>
 
             <TextView
-                android:id="@+id/heightTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Height"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/heightMeasurementRadioGroup" />
-
-            <TextView
                 android:id="@+id/birthdayTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -189,6 +185,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/birthdayTextView" />
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
