--- a/MacrosManager/app/src/main/res/values/styles.xml
+++ b/MacrosManager/app/src/main/res/values/styles.xml
@@ -1,12 +1,38 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/notosansui_regular</item>
+    </style>
+
+    <style name="PageTitle">
+        <item name="android:textSize">@dimen/title</item>
+        <item name="fontFamily">@font/notosansui_bold</item>
+    </style>
+
+    <style name="PageDescription">
+        <item name="android:textSize">@dimen/body</item>
+        <item name="fontFamily">@font/notosansui_regular</item>
+    </style>
+
+    <style name="SettingsHeader">
+        <item name="android:textSize">@dimen/header</item>
+        <item name="fontFamily">@font/notosansui_bold</item>
+    </style>
+
+    <style name="SettingsRadioButton" parent="Widget.Material3.CompoundButton.RadioButton">
+        <item name="android:textSize">@dimen/body</item>
+        <item name="fontFamily">@font/notosansui_regular</item>
+    </style>
+
+    <style name="ExtendedFab" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
+        <item name="fontFamily">@font/notosansui_bold</item>
+        <item name="backgroundTint">@color/colorPrimaryDark</item>
+        <item name="android:textSize">@dimen/body</item>
     </style>
 
 </resources>
