--- a/MacrosManager/app/src/main/res/menu/no_user_menu.xml
+++ b/MacrosManager/app/src/main/res/menu/no_user_menu.xml
@@ -2,12 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_sign_up"
+        android:title="@string/sign_up" />
+
+    <item
         android:id="@+id/action_sign_in"
-        android:title="Sign In" />
+        android:title="@string/sign_in" />
 
     <item
         android:id="@+id/action_settings"
-        android:title="Settings"
-        />
+        android:title="@string/settings" />
 
 </menu>
